--- a/app/src/main/res/layout/activity_cupom.xml
+++ b/app/src/main/res/layout/activity_cupom.xml
@@ -159,8 +159,8 @@
 
     <TextView
         android:id="@+id/textView25"
-        android:layout_width="335dp"
-        android:layout_height="31dp"
+        android:layout_width="255dp"
+        android:layout_height="35dp"
         android:fontFamily="@font/inter"
         android:gravity="center"
         android:text="@string/textC2"
@@ -168,9 +168,26 @@
         android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
         app:layout_constraintVertical_bias="0.051" />
+
+    <TextView
+        android:id="@+id/datavalidade"
+        android:layout_width="85dp"
+        android:layout_height="38dp"
+        android:fontFamily="@font/inter"
+        android:gravity="center"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView25"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintVertical_bias="0.049" />
 
     <TextView
         android:id="@+id/textView27"
