--- a/app/src/main/res/layout/cupom200item.xml
+++ b/app/src/main/res/layout/cupom200item.xml
@@ -8,31 +8,42 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="402dp"
-        android:layout_height="417dp"
-        app:srcCompat="@drawable/cupom_background_rose"
-        tools:layout_editor_absoluteX="-7dp"
-        tools:layout_editor_absoluteY="51dp"/>
+        android:layout_width="397dp"
+        android:layout_height="131dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.328"
+        app:srcCompat="@drawable/cupom_background_rose" />
 
     <ImageView
         android:id="@+id/btnCupomDetalhes"
         android:layout_width="98dp"
         android:layout_height="34dp"
-        app:srcCompat="@drawable/saibamaisbtn"
-        tools:layout_editor_absoluteX="293dp"
-        tools:layout_editor_absoluteY="276dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.969"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.814"
+        app:srcCompat="@drawable/saibamaisbtn" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="195dp"
         android:layout_height="56dp"
+        android:layout_marginStart="60dp"
         android:fontFamily="@font/inter_semibold"
         android:text="R$ 200,00"
         android:textColor="@color/yellow_cupom"
         android:textFontWeight="900"
         android:textSize="38dp"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="236dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.506" />
 
     <TextView
         android:id="@+id/textView7"
@@ -43,8 +54,12 @@
         android:textColor="@color/white"
         android:textFontWeight="700"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="211dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.202"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.122" />
 
     <TextView
         android:id="@+id/textView8"
@@ -52,8 +67,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_semibold"
         android:text="Válido até 27 Ago 2022"
-        android:textSize="11sp"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="70dp"
-        tools:layout_editor_absoluteY="286dp" />
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.843" />
 </androidx.constraintlayout.widget.ConstraintLayout>
