--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,7 +7,7 @@
     tools:context=".CadastroActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName8"
+        android:id="@+id/editTextCpf"
         android:layout_width="288dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
@@ -110,7 +110,7 @@
         app:layout_constraintVertical_bias="0.464" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/editTextTelefone"
         android:layout_width="288dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
@@ -161,16 +161,16 @@
         android:id="@+id/editTextSenha"
         android:layout_width="288dp"
         android:layout_height="46dp"
+        android:layout_marginBottom="188dp"
         android:ems="10"
-        android:hint="senha"
 
+        android:hint="senha"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
-        app:layout_constraintVertical_bias="0.056" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
