--- a/app/src/main/res/layout/activity_atualiza_senha.xml
+++ b/app/src/main/res/layout/activity_atualiza_senha.xml
@@ -33,11 +33,11 @@
         app:srcCompat="@drawable/volaitmain" />
 
     <ImageButton
-        android:background="@color/white"
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="TelaMenu"
+        android:background="@color/white"
+        android:onClick="TelaEdit"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
         app:layout_constraintEnd_toStartOf="@+id/imageView23"
         app:layout_constraintHorizontal_bias="0.115"
