--- a/app/src/main/res/layout/activity_cupom.xml
+++ b/app/src/main/res/layout/activity_cupom.xml
@@ -53,7 +53,7 @@
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="TelaMenu"
+        android:onClick="TelaMain"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
         app:layout_constraintEnd_toStartOf="@+id/imageView23"
         app:layout_constraintHorizontal_bias="0.115"
