--- a/app/src/main/res/layout/activity_privacidade.xml
+++ b/app/src/main/res/layout/activity_privacidade.xml
@@ -19,6 +19,20 @@
         app:srcCompat="@drawable/menu__1_" />
 
     <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:onClick="TelaMenu"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toStartOf="@+id/imageView11"
+        app:layout_constraintHorizontal_bias="0.009"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView9"
+        app:layout_constraintVertical_bias="0.47"
+        app:srcCompat="@drawable/setinha" />
+
+    <ImageView
         android:id="@+id/imageView11"
         android:layout_width="58dp"
         android:layout_height="26dp"
@@ -90,5 +104,37 @@
         app:layout_constraintStart_toEndOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
         app:srcCompat="@drawable/cupons" />
+
+    <ScrollView
+        android:layout_width="327dp"
+        android:layout_height="572dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView29"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:fontFamily="@font/inter_semibold"
+                android:gravity="center"
+                android:text="Política de Privacidade"
+                android:textColor="@color/black"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="match_parent"
+                android:layout_height="438dp"
+                android:text="@string/textPrivacity" />
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
