--- a/app/src/main/res/layout/cupom100item.xml
+++ b/app/src/main/res/layout/cupom100item.xml
@@ -10,9 +10,13 @@
         android:id="@+id/imageViewBackP"
         android:layout_width="404dp"
         android:layout_height="127dp"
-        app:srcCompat="@drawable/cupom_background_purple"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="191dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.349"
+        app:srcCompat="@drawable/cupom_background_purple" />
 
     <ImageView
         android:id="@+id/btnCupomDetalhes"
