--- a/app/src/main/res/layout/activity_lancamento.xml
+++ b/app/src/main/res/layout/activity_lancamento.xml
@@ -4,43 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CuponsActivity"
+    tools:context=".LancamentoActivity"
     android:background="@color/backgray">
 
-    <Button
-        android:id="@+id/btnResgatar"
-        android:layout_width="302dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/laranjaVolait"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Resgatar"
-        android:textColor="@color/white"
-        android:textSize="50px"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="426dp"
+        android:layout_height="244dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/img_thumbnailvolait"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.869" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="316dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="CUPOM"
-        android:textColor="@color/laranjaVolait"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.036" />
+        app:layout_constraintTop_toTopOf="@+id/imageView26"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/retangulorange" />
 
     <ImageView
         android:id="@+id/imageView26"
@@ -71,7 +49,7 @@
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="TelaMain"
+        android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
         app:layout_constraintEnd_toStartOf="@+id/imageView23"
         app:layout_constraintHorizontal_bias="0.115"
@@ -115,7 +93,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageButton2"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
         app:layout_constraintVertical_bias="0.666"
-        app:srcCompat="@drawable/favoritos" />
+        app:srcCompat="@drawable/favoritos__1_" />
 
     <ImageButton
         android:id="@+id/imageButton4"
@@ -141,87 +119,74 @@
         app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
-        app:srcCompat="@drawable/cupons__1_" />
+        app:srcCompat="@drawable/cupons" />
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="319dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="28dp"
-        android:fontFamily="@font/inter_semibold"
-        android:gravity="start"
-        android:text="@string/textC1"
-        android:textColor="@color/black"
+    <ImageView
+        android:id="@+id/img_thumbnailvolait"
+        android:layout_width="350dp"
+        android:layout_height="226dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.645"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView26"
+        app:layout_constraintVertical_bias="0.315"
+        app:srcCompat="@drawable/thumbnail2" />
 
     <TextView
-        android:id="@+id/textView24"
-        android:layout_width="287dp"
-        android:layout_height="62dp"
+        android:id="@+id/textView4"
+        android:layout_width="347dp"
+        android:layout_height="78dp"
         android:fontFamily="@font/inter_semibold"
         android:gravity="center"
-        android:text="KNS-LLM-JOS"
-        android:textColor="@color/black"
-        android:textSize="36dp"
+        android:text="Que tal aproveitar os meses de inverno para curtir um friozinho na viagem? Então confira 8 desses lugares para viajar no inverno pela América do Sul e delicie-se!"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/img_thumbnailvolait"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView26"
+        app:layout_constraintVertical_bias="0.634" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="149dp"
+        android:layout_height="18dp"
+        android:text="Clique para saber mais"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_thumbnailvolait"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="373dp"
+        android:layout_height="61dp"
+        android:fontFamily="@font/inter_semibold"
+        android:gravity="center"
+        android:text="CONFIRA TAMBÉM NOSSAS PROMOÇÕES NA TELA DE CUPONS!!! "
+        android:textColor="@color/laranjaVolait"
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintTop_toBottomOf="@+id/textView32"
+        app:layout_constraintVertical_bias="0.284" />
 
     <TextView
-        android:id="@+id/textView25"
-        android:layout_width="255dp"
-        android:layout_height="35dp"
-        android:fontFamily="@font/inter"
+        android:id="@+id/textView34"
+        android:layout_width="344dp"
+        android:layout_height="39dp"
+        android:fontFamily="@font/inter_semibold"
         android:gravity="center"
-        android:text="@string/textC2"
-        android:textColor="@color/black"
-        android:textSize="12dp"
+        android:text="Mais novidades em breve..."
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
-        app:layout_constraintVertical_bias="0.051" />
-
-    <TextView
-        android:id="@+id/datavalidade"
-        android:layout_width="84dp"
-        android:layout_height="35dp"
-        android:fontFamily="@font/inter"
-        android:gravity="center"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
-        app:layout_constraintVertical_bias="0.049" />
-
-    <TextView
-        android:id="@+id/textView27"
-        android:layout_width="300dp"
-        android:layout_height="74dp"
-        android:fontFamily="@font/inter"
-        android:gravity="center"
-        android:text="@string/textC3"
-        android:textColor="@color/black"
-        android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25"
-        app:layout_constraintVertical_bias="0.065" />
+        app:layout_constraintTop_toBottomOf="@+id/textView32"
+        app:layout_constraintVertical_bias="0.95" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
