--- a/app/src/main/res/layout/activity_atualiza_senha.xml
+++ b/app/src/main/res/layout/activity_atualiza_senha.xml
@@ -75,6 +75,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaLancamento"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
@@ -121,10 +122,10 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintVertical_bias="0.059" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
@@ -132,12 +133,14 @@
         android:layout_height="46dp"
         android:ems="10"
         android:fontFamily="@font/inter"
+        android:hint="Senha Atual"
         android:inputType="textPersonName"
-        android:text="Senha Atual"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView26" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView26"
+        app:layout_constraintVertical_bias="0.509" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
@@ -146,14 +149,14 @@
         android:layout_marginBottom="296dp"
         android:ems="10"
         android:fontFamily="@font/inter"
+        android:hint="Nova Senha"
         android:inputType="textPersonName"
-        android:text="Nova Senha"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.923" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
@@ -162,14 +165,14 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:fontFamily="@font/inter"
+        android:hint="Repetir senha"
         android:inputType="textPersonName"
-        android:text="Repetir senha"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
-        app:layout_constraintVertical_bias="0.028" />
+        app:layout_constraintVertical_bias="0.061" />
 
     <TextView
         android:id="@+id/textView19"
@@ -177,13 +180,13 @@
         android:layout_height="27dp"
         android:layout_marginStart="155dp"
         android:layout_marginEnd="198dp"
-        android:layout_marginBottom="400dp"
+        android:layout_marginBottom="380dp"
         android:fontFamily="@font/inter_semibold"
         android:text="Esqueceu a senha?"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.778"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
         app:layout_constraintVertical_bias="1.0" />
@@ -199,19 +202,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView19"
-        app:layout_constraintTop_toTopOf="@+id/textView19" />
+        app:layout_constraintTop_toTopOf="@+id/textView19"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="214dp"
-        android:layout_height="46dp"
+        android:layout_width="212dp"
+        android:layout_height="53dp"
         android:text="Salvar"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.421" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
