--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,18 @@
     android:background="@color/backgray">
 
     <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="439dp"
+        android:layout_height="181dp"
+        android:layout_marginBottom="84dp"
+        app:layout_constraintBottom_toTopOf="@+id/CuponsListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:layout_constraintVertical_bias="0.096"
+        app:srcCompat="@drawable/thumb_main" />
+
+    <ImageView
         android:id="@+id/imageView9"
         android:layout_width="566dp"
         android:layout_height="70dp"
@@ -60,6 +72,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaLancamento"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
@@ -96,30 +109,36 @@
 
     <ListView
         android:id="@+id/CuponsListView"
-        android:layout_width="410dp"
-        android:layout_height="562dp"
+        android:layout_width="394dp"
+        android:layout_height="430dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
+        android:background="@color/azulcupom"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:layout_constraintVertical_bias="1.0">
+
+
+    </ListView>
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="414dp"
-        android:layout_height="41dp"
-        android:text="Cupons Disponíveis:"
+        android:layout_width="128dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/inter_semibold"
         android:gravity="center"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        android:text="Resgate o seu sonho de voar"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/laranjaVolait"
         app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.045" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
