--- a/app/src/main/res/layout/activity_privacidade.xml
+++ b/app/src/main/res/layout/activity_privacidade.xml
@@ -58,13 +58,13 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaHome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
-        app:srcCompat="@drawable/home"
-        />
+        app:srcCompat="@drawable/home" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -72,6 +72,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaLancamento"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
@@ -85,6 +86,7 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
@@ -97,7 +99,7 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        android:onClick="TelaCupom"
+        android:onClick="TelaCuponsResgatados"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.181"
