--- a/app/src/main/res/layout/cupom100item.xml
+++ b/app/src/main/res/layout/cupom100item.xml
@@ -3,78 +3,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/card__cupom">
 
+        <ImageView
+            android:id="@+id/imageViewBackP"
+            android:layout_width="355dp"
+            android:layout_height="132dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.359"
+            app:srcCompat="@drawable/cupom_background_blue" />
 
-    <ImageView
-        android:id="@+id/imageViewBackP"
-        android:layout_width="389dp"
-        android:layout_height="122dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346"
-        app:srcCompat="@drawable/cupom_background_blue" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="195dp"
+            android:layout_height="56dp"
+            android:backgroundTint="@color/laranja1"
+            android:fontFamily="@font/inter_semibold"
+            android:text="R$ 100,00"
+            android:textColor="@color/yellow_cupom"
+            android:textFontWeight="900"
+            android:textSize="38dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
+            app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
+            app:layout_constraintHorizontal_bias="0.308"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
+            app:layout_constraintVertical_bias="0.507" />
 
-    <ImageView
-        android:id="@+id/btnCupomDetalhes"
-        android:layout_width="98dp"
-        android:layout_height="34dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
-        app:layout_constraintHorizontal_bias="0.975"
-        app:layout_constraintStart_toStartOf="@+id/imageViewBackP"
-        app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
-        app:layout_constraintVertical_bias="0.784"
-        app:srcCompat="@drawable/saibamaisbtn" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="107dp"
+            android:layout_height="23dp"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Oferta de"
+            android:textColor="@color/white"
+            android:textFontWeight="700"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
+            app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
+            app:layout_constraintHorizontal_bias="0.217"
+            app:layout_constraintStart_toStartOf="@+id/imageViewBackP"
+            app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
+            app:layout_constraintVertical_bias="0.13" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="195dp"
-        android:layout_height="56dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="R$ 100,00"
-        android:backgroundTint="@color/laranjaVolait"
-        android:textColor="@color/yellow_cupom"
-        android:textFontWeight="900"
-        android:textSize="38dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
-        app:layout_constraintHorizontal_bias="0.404"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
-        app:layout_constraintVertical_bias="0.507" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Válido até 27 Ago 2022"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
+            app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
+            app:layout_constraintHorizontal_bias="0.162"
+            app:layout_constraintStart_toStartOf="@+id/imageViewBackP"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="130dp"
-        android:layout_height="25dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Oferta de"
-        android:textColor="@color/white"
-        android:textFontWeight="700"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="@+id/imageViewBackP"
-        app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
-        app:layout_constraintVertical_bias="0.107" />
+        <TextView
+            android:id="@+id/textView35"
+            android:layout_width="83dp"
+            android:layout_height="65dp"
+            android:fontFamily="@font/inter_semibold"
+            android:gravity="center"
+            android:text="VER MAIS"
+            android:textColor="@color/white"
+            android:textSize="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
+            app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
+            app:layout_constraintHorizontal_bias="0.81"
+            app:layout_constraintStart_toEndOf="@+id/textView6"
+            app:layout_constraintTop_toTopOf="@+id/imageViewBackP"
+            app:layout_constraintVertical_bias="0.578" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Válido até 27 Ago 2022"
-        android:textColor="@color/white"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackP"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewBackP"
-        app:layout_constraintHorizontal_bias="0.302"
-        app:layout_constraintStart_toStartOf="@+id/imageViewBackP"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.233" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
