--- a/app/src/main/res/layout/activity_cupom.xml
+++ b/app/src/main/res/layout/activity_cupom.xml
@@ -13,7 +13,7 @@
         android:layout_height="75dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/laranjaVolait"
+        android:backgroundTint="@color/laranja1"
         android:fontFamily="@font/inter_semibold"
         android:text="Resgatar"
         android:textColor="@color/white"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="316dp"
         android:fontFamily="@font/inter_semibold"
         android:text="CUPOM"
-        android:textColor="@color/laranjaVolait"
+        android:textColor="@color/laranja1"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,18 +54,21 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/menu__1_" />
 
-    <ImageView
-        android:id="@+id/imageView23"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.379"
-        app:srcCompat="@drawable/volaitmain" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView28"
@@ -73,11 +76,10 @@
         android:layout_height="wrap_content"
         android:onClick="TelaMain"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
-        app:layout_constraintEnd_toStartOf="@+id/imageView23"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintEnd_toStartOf="@+id/textView36"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.47"
         app:srcCompat="@drawable/setinha" />
 
     <ImageView
@@ -168,7 +170,7 @@
         android:fontFamily="@font/inter_semibold"
         android:gravity="center"
         android:text="KNS-LLM-JOS"
-        android:textColor="@color/black"
+        android:textColor="@color/laranja1"
         android:textSize="36dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
