--- a/app/src/main/res/layout/activity_edit_perfil.xml
+++ b/app/src/main/res/layout/activity_edit_perfil.xml
@@ -19,18 +19,20 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/menu__1_" />
 
-    <ImageView
-        android:id="@+id/imageView23"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
+    <TextView
+        android:id="@+id/textView37"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.379"
-        app:srcCompat="@drawable/volaitmain" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView28"
@@ -38,11 +40,11 @@
         android:layout_height="wrap_content"
         android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
-        app:layout_constraintEnd_toStartOf="@+id/imageView23"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintEnd_toStartOf="@+id/textView37"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintVertical_bias="0.382"
         app:srcCompat="@drawable/setinha" />
 
     <ImageView
