--- a/app/src/main/res/layout/activity_lancamento.xml
+++ b/app/src/main/res/layout/activity_lancamento.xml
@@ -32,18 +32,20 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/menu__1_" />
 
-    <ImageView
-        android:id="@+id/imageView23"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
+    <TextView
+        android:id="@+id/textView38"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.379"
-        app:srcCompat="@drawable/volaitmain" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView28"
@@ -51,11 +53,11 @@
         android:layout_height="wrap_content"
         android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
-        app:layout_constraintEnd_toStartOf="@+id/imageView23"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintEnd_toStartOf="@+id/textView38"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView26"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintVertical_bias="0.382"
         app:srcCompat="@drawable/setinha" />
 
     <ImageView
@@ -166,7 +168,7 @@
         android:fontFamily="@font/inter_semibold"
         android:gravity="center"
         android:text="CONFIRA TAMBÉM NOSSAS PROMOÇÕES NA TELA DE CUPONS!!! "
-        android:textColor="@color/laranjaVolait"
+        android:textColor="@color/laranja1"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
