--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     tools:context=".MainActivity"
     android:background="@color/backgray">
 
+    <TextView
+        android:id="@+id/textView44"
+        android:layout_width="185dp"
+        android:layout_height="27dp"
+        android:fontFamily="@font/inter_semibold"
+        android:gravity="center"
+        android:text="SUPER PROMOÇÕES"
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/CuponsListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView17"
+        app:layout_constraintVertical_bias="0.454" />
+
     <ImageView
         android:id="@+id/imageView17"
         android:layout_width="439dp"
@@ -16,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.096"
+        app:layout_constraintVertical_bias="0.333"
         app:srcCompat="@drawable/thumb_main" />
 
     <ImageView
@@ -31,18 +47,20 @@
         app:srcCompat="@drawable/menu__1_" />
 
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:srcCompat="@drawable/volaitmain" />
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -109,11 +127,11 @@
 
     <ListView
         android:id="@+id/CuponsListView"
-        android:layout_width="394dp"
-        android:layout_height="430dp"
+        android:layout_width="391dp"
+        android:layout_height="373dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:background="@color/azulcupom"
+        android:background="#FAA186"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
