--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,17 +20,6 @@
         app:srcCompat="@drawable/menu__1_" />
 
     <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:srcCompat="@drawable/volaitmain" />
-
-    <ImageView
         android:id="@+id/imageView8"
         android:layout_width="559dp"
         android:layout_height="78dp"
@@ -93,6 +82,7 @@
         app:srcCompat="@drawable/cupons" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="395dp"
         android:layout_height="601dp"
         android:layout_marginStart="3dp"
@@ -188,18 +178,56 @@
             android:layout_marginTop="4dp"
             android:background="@color/white"
             android:gravity="center"
+            android:onClick="TelaLancamento"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView133"
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/favoritos__1_" />
+
+            <TextView
+                android:id="@+id/textView143"
+                android:layout_width="190dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/inter_semibold"
+                android:gravity="center"
+                android:text="Novidades"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+            <ImageView
+                android:id="@+id/imageView153"
+                android:layout_width="1dp"
+                android:layout_height="22dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/triangulo" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
+            android:background="@color/white"
+            android:gravity="center"
             android:onClick="TelaeditPerfil"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/imageView163"
                 android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/perfil_icon" />
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/textView173"
                 android:layout_width="190dp"
                 android:layout_height="32dp"
                 android:layout_weight="1"
@@ -211,7 +239,7 @@
                 android:textSize="15dp" />
 
             <ImageView
-                android:id="@+id/imageView18"
+                android:id="@+id/imageView183"
                 android:layout_width="1dp"
                 android:layout_height="22dp"
                 android:layout_weight="1"
@@ -334,5 +362,21 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        android:fontFamily="@font/inter_semibold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
