--- a/app/src/main/res/layout/activity_my_cupons.xml
+++ b/app/src/main/res/layout/activity_my_cupons.xml
@@ -14,16 +14,16 @@
         android:layout_marginStart="33dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="420dp"
-        android:fontFamily="@font/inter_semibold"
+        android:fontFamily="@font/inter"
         android:gravity="center_horizontal"
         android:text="@string/TextMyCupons"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView31"
-        app:layout_constraintVertical_bias="0.265" />
+        app:layout_constraintVertical_bias="0.126" />
 
     <TextView
         android:id="@+id/textView31"
@@ -51,6 +51,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu__1_" />
 
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="wrap_content"
@@ -58,23 +73,12 @@
         android:layout_marginStart="32dp"
         android:onClick="Telahome"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintHorizontal_bias="0.009"
+        app:layout_constraintEnd_toStartOf="@+id/textView40"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintVertical_bias="0.382"
         app:srcCompat="@drawable/setinha" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:srcCompat="@drawable/volaitmain" />
 
     <ListView
         android:id="@+id/CuponsListView"
