--- a/app/src/main/res/layout/activity_privacidade.xml
+++ b/app/src/main/res/layout/activity_privacidade.xml
@@ -18,6 +18,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu__1_" />
 
+    <TextView
+        android:id="@+id/textView41"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semibold"
+        android:text="Volait"
+        android:textColor="@color/laranjaVolait"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="wrap_content"
@@ -25,23 +40,12 @@
         android:layout_marginStart="32dp"
         android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintHorizontal_bias="0.009"
+        app:layout_constraintEnd_toStartOf="@+id/textView41"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintVertical_bias="0.382"
         app:srcCompat="@drawable/setinha" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="58dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
-        app:srcCompat="@drawable/volaitmain" />
 
     <ImageView
         android:id="@+id/imageView8"
