--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -186,7 +186,7 @@
                 android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/favoritos__1_" />
+                app:srcCompat="@drawable/favoritos_icon" />
 
             <TextView
                 android:id="@+id/textView143"
