--- a/app/src/main/res/layout/activity_my_cupons.xml
+++ b/app/src/main/res/layout/activity_my_cupons.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="540dp"
         android:fontFamily="@font/inter_semibold"
-        android:text="Cupons resgatados disponíveis"
+        android:text="Cupons resgatados disponíveis:"
         android:textColor="@color/laranjaVolait"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
@@ -83,9 +83,10 @@
     <ListView
         android:id="@+id/CuponsListView"
         android:layout_width="409dp"
-        android:layout_height="462dp"
+        android:layout_height="478dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
+        android:background="#F8BBA8"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -122,6 +123,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaCupom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
@@ -135,7 +137,7 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        android:onClick="Telahome"
+        android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
